FLY wire David/force-app/main/default/objects/Account_Metrics__c/Account_Metrics__c.object-meta.xml
<CustomObject>
    <description>Capture Data including number of International Students, Enrollment Data, Revenue, etc for YoY comparison.</description>
    <label>Account Metrics</label>
    <nameField>
        <displayFormat>AM-{0}</displayFormat>
        <label>Account Metrics</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>