FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to account - links this backup record to an account to help with reporting.</description>
    <inlineHelpText>Lookup field to account - links this backup record to an account to help with reporting.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Backups</relationshipName>
    <type>Lookup</type>
</CustomField>