FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Graduate_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Enrollment__c</fullName>
    <description>Copy of &apos;Graduate Enrollment&apos; from Account Object.</description>
    <inlineHelpText>Copy of &apos;Graduate Enrollment&apos; from Account Object.</inlineHelpText>
    <label>Graduate Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>