FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Money_Moved__c.field-meta.xml
<CustomField>
    <fullName>Money_Moved__c</fullName>
    <description>Money Moved for this Account this year.</description>
    <inlineHelpText>Money Moved for this Account this year.</inlineHelpText>
    <label>Money Moved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>