FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/No_International_Payers_At_Account__c.field-meta.xml
<CustomField>
    <fullName>No_International_Payers_At_Account__c</fullName>
    <description>Copy of &apos;No. International Payers At Account&apos; from Account Object</description>
    <inlineHelpText>Copy of &apos;No. International Payers At Account&apos; from Account Object</inlineHelpText>
    <label>No. International Payers At Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>