FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/of_Payers__c.field-meta.xml
<CustomField>
    <fullName>of_Payers__c</fullName>
    <description>Number of payers for this account this year.</description>
    <inlineHelpText>Number of payers for this account this year.</inlineHelpText>
    <label># of Payers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>