FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Revenue for the Account for the year.</description>
    <inlineHelpText>Revenue for the Account for the year.</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>