FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Undergrad_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_Enrollment__c</fullName>
    <description>Copy of &apos;Undergrad Enrollment&apos; from Account Object</description>
    <inlineHelpText>Copy of &apos;Undergrad Enrollment&apos; from Account Object</inlineHelpText>
    <label>Undergrad Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>