FLY wire David/force-app/main/default/objects/Account_Metrics__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year data on this record is for.</description>
    <inlineHelpText>Year data on this record is for.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>