FLY wire David/force-app/main/default/objects/Account_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Money_Moved__c</columns>
    <columns>of_Payers__c</columns>
    <columns>No_International_Payers_At_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>