FLY wire David/force-app/main/default/objects/Account_Metrics__c/listViews/Metrics_2023.listView-meta.xml
<ListView>
    <fullName>Metrics_2023</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>No_International_Payers_At_Account__c</columns>
    <columns>Graduate_Enrollment__c</columns>
    <columns>Undergrad_Enrollment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>Metrics 2023</label>
</ListView>